ie7 layout bug fixes
git-svn-id: http://svn.localprojects.net/gam2/trunk@933 befef031-aaeb-48d0-b70f-681328309d3d

--- a/static/css/ie/tc.gam.ie.css
+++ b/static/css/ie/tc.gam.ie.css
@@ -3,6 +3,13 @@
 	Internet Explorer general CSS (IE 9 and below)
 -------------------------------------------------------------------------------*/
 
+
+/*-----------------------------------------------------------------------------
+UTILS */
+
+.has-layout-fixer { zoom:1; }
+
+
 /*-----------------------------------------------------------------------------
 GENERAL & SITE-WIDE STYLES */
 
